add support for Grafana Datasource plugin
